Improve CreateSubmission response, fix TestCaseInputs name not being set, add additional test cases properties, and add input, memory to RunRequest type. Other OpenAPI document updates.
